--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,15 @@ selector {
 
 /* Type selector */
 
+header {
+  position: fixed;
+  top: 0;
+  left:0;
+  width: 100%;
+  background-color: #fff;
+  z-index: 1;
+}
+
 p { /* select all <p> */
   font-size: 1em; /* 16px, ?pt, 100%, 1em */
   line-height: 1.5em;
@@ -31,6 +40,10 @@ figcaption {
   text-align: right;
 }
 
+footer {
+  clear: both;
+}
+
 /* Class selector (applied to as many elements as you like) */
 
 .milk-text { /* select elements with class="milk-text" */
@@ -42,7 +55,7 @@ figcaption {
 /* ID selector (apply to one unique element per page) */
 
 #logo { /* select elements with id="logo" */
-  background: aqua;
+  
 }
 
 /* Descendent Selector */
@@ -69,4 +82,80 @@ figcaption {
 
 #details a:active {
   color: red;
+}
+
+/*MEDIA*/
+
+video, img, audio {
+  max-width: 100%;
+}
+
+
+/*LAYOUT*/
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.wrapper {
+  width: 960px;
+  margin: 0 auto;
+}
+
+.col-1 {
+  float: left;
+  width: 32%;
+  background-color: #ccc;
+}
+
+.col-2 {
+  float: left;
+  width: 66%;
+  background-color: #ccc;
+}
+
+.col-3 {
+  background-color: #ccc;
+}
+
+[class*="col-"] {
+  margin-left: 2%;
+}
+
+.first {
+  margin-left: 0;
+}
+
+.clearfix:after {
+  content: ".";
+  display: block;
+  visibility: hidden;
+  clear: both;
+  height: 0;
+  line-height: 0;
+}
+
+#social {
+  position: fixed;
+  right: 20px;
+  top: 200px;
+  width: 40px;
+  z-index: 1;
+}
+
+#social a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  background-color: yellow;
+}
+
+
+/*SECTIONS*/
+
+section {
+  padding: 20px;
+  margin-bottom: 20px;
 }
